--- a/Backend/config/config.json
+++ b/Backend/config/config.json
@@ -3,7 +3,7 @@
   "user": "postgres",
   "port": 5432,
   "password": "Harish.bg@cli",
-  "database": "techipro",
+  "database": "techiepro",
 
   "jwtExpiration": 3600,
   "jwtRefreshExpiration": 86400,
