--- a/Backend/config/config.json
+++ b/Backend/config/config.json
@@ -2,9 +2,8 @@
   "host": "localhost",
   "user": "postgres",
   "port": 5432,
-  "password": "Harish.bg@cli",
+  "password": "gaqlaxy",
   "database": "Techiepro",
-
   "jwtExpiration": 3600,
   "jwtRefreshExpiration": 86400,
   "//jwtExpiration": 60,
