--- a/Backend/config.env
+++ b/Backend/config.env
@@ -3,7 +3,7 @@ PORT = 3000
 USER = postgres
 HOST = localhost 
 DBPORT = 5432
-PASSWORD = Harish.bg@cli
+PASSWORD = gaqlaxy
 DATABASE =Techiepro
 
 JWT_SECRET_KEY = Company_Law_Institute_Of_India
